--- a/iot/package.json
+++ b/iot/package.json
@@ -1,5 +1,8 @@
 {
   "dependencies": {
+    "axios": "^1.8.4",
+    "express": "^5.1.0",
+    "fs": "^0.0.1-security",
     "mqtt": "^5.10.4"
   }
 }
